implemented the Bayes Ball algorithm